<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
        xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
        android:id="@+id/tab_payment"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="#e9e8dd">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/posmachine"
                android:layout_margin="10dp"
                android:layout_gravity="center"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/orderpricebox"
                android:background="#e9e8dd"
                android:orientation="horizontal"
                android:layout_marginBottom="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/order_price_title"
                    android:id="@+id/orderpricetitle"
                    android:textColor="#000000"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/orderprice"
                    android:text="@string/order_price"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"/>
            </LinearLayout>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/nakitodemebtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/pay_cash_button_text"
                bootstrap:bb_icon_right="fa-money"
                bootstrap:bb_type="success"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_size="large"
                android:textSize="16sp"
                android:layout_gravity="center"
                />


            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pay_with_payanywhere_text"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="15dp"/>

            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/passcardbtn"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="10dp"
                android:text="@string/read_card_button_text"
                bootstrap:bb_icon_right="fa-credit-card"
                bootstrap:bb_type="primary"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_size="large"
                android:textSize="16sp"
                android:layout_gravity="center"
                />
            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/payanywhere_logo"
                android:layout_marginBottom="5dp"
                />

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:background="#c0c0c0"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/pay_by_entering_cardno"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

            <com.beardedhen.androidbootstrap.BootstrapEditText
                android:id="@+id/cardno"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/cardno_hint"
                android:textAlignment="center"
                bootstrap:be_roundedCorners="true"
                android:gravity="center"
                android:textSize="16sp"
                bootstrap:be_state="default"
                android:maxLength="16"
                android:layout_gravity="center_horizontal"
                android:inputType="number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#e9e8dd"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="27dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/expdate_text"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="41dp"/>

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/expdate"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:hint="@string/expdate_hint"
                    android:textAlignment="center"
                    android:textSize="14sp"
                    bootstrap:be_roundedCorners="true"
                    android:gravity="center"
                    bootstrap:be_state="default"
                    android:maxLength="5"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
             </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#e9e8dd"
                android:layout_marginStart="27dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textAlignment="center"
                    android:text="CVC"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginStart="90dp"/>

                <com.beardedhen.androidbootstrap.BootstrapEditText
                    android:id="@+id/cvc"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="67dp"
                    android:hint="..."
                    android:textAlignment="center"
                    bootstrap:be_roundedCorners="true"
                    android:gravity="center"
                    bootstrap:be_state="default"
                    android:maxLength="3"
                    android:inputType="number"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"/>
            </LinearLayout>
            <com.beardedhen.androidbootstrap.BootstrapButton
                android:id="@+id/paywithcreditbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/completepayment"
                bootstrap:bb_icon_right="fa-check-square"
                bootstrap:bb_type="primary"
                bootstrap:bb_roundedCorners="true"
                bootstrap:bb_size="large"
                android:textSize="16sp"
                android:layout_gravity="center"
                />
            <ImageView
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:id="@+id/cardLogos"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/credit_card_logos" />

            <com.beardedhen.androidbootstrap.FontAwesomeText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                fontawesometext:fa_icon="fa-motorcycle"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:layout_marginTop="13dp"
                android:textSize="26sp"
                />

        </LinearLayout>
    </ScrollView>