<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bootstrap="http://schemas.android.com/apk/res-auto"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_address"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e8dd"
    android:focusable="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e9e8dd"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/jobtypetitle"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="Paket alma"
            android:id="@+id/jobtype"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>
        <!--android:text="N/A"-->
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/destinationtitle"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="start"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/cardno"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        bootstrap:be_roundedCorners="true"
        android:text="Akaygen Sokak No:2 Küçükbebek Hisarüstü Sarıyer / İstanbul"
        android:gravity="center"
        android:textSize="16sp"
        bootstrap:be_state="default"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:editable="false"
        android:clickable="false"/>
        <!--android:hint="@string/noaddress"-->

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/addressdesctitle"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:gravity="start"/>
    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/addressdesc"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:textAlignment="center"
        bootstrap:be_roundedCorners="true"
        android:text="Lorem Ipsum dolor sit amet, consectetuer adipiscingelit. Duis tellus. Donec ante dolor, iaculis nec, gravidaac, cursus in, eros. Mauris vestibulum, felis et egestasullamcorper, purus nibh vehicula sem, eu egestas antenisl non justo."
        android:gravity="center"
        android:textSize="16sp"
        bootstrap:be_state="default"
        android:layout_gravity="center"
        android:textColor="#000000"
        android:inputType="none"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:editable="false"
        android:clickable="false"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/gotomapbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/gotomapbtntext"
        bootstrap:bb_icon_right="fa-map-marker"
        bootstrap:bb_type="success"
        bootstrap:bb_roundedCorners="true"
        bootstrap:bb_size="large"
        android:textSize="16sp"
        android:layout_gravity="center"
        />

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/callbtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/callcustomerbtntext"
        bootstrap:bb_icon_right="fa-phone"
        bootstrap:bb_type="primary"
        bootstrap:bb_roundedCorners="true"
        bootstrap:bb_size="large"
        android:textSize="16sp"
        android:layout_gravity="center"
        />

    <com.beardedhen.androidbootstrap.FontAwesomeText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fontawesometext:fa_icon="fa-motorcycle"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="15dp"
        android:foregroundGravity="bottom"
        android:textSize="26sp"
        />

</LinearLayout>