<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e8dd">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/profilephoto"
    android:layout_margin="10dp"
    android:layout_gravity="center"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e9e8dd"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/usernametitle"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/nousername"
            android:id="@+id/username"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>
        <!--android:text="N/A"-->
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e9e8dd"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/deliverycnttitle"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="5"
            android:id="@+id/deliverycnt"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>
        <!--android:text="N/A"-->
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:background="#c0c0c0"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#e9e8dd"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/moneyearnedtitle"
            android:textColor="#000000"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="13.75 TL"
            android:id="@+id/moneyearned"
            android:textColor="#000000"
            android:textSize="18sp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:gravity="start"/>
        <!--android:text="N/A"-->
    </LinearLayout>

    <com.beardedhen.androidbootstrap.FontAwesomeText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        fontawesometext:fa_icon="fa-motorcycle"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="235dp"
        android:textSize="26sp"
        />

</LinearLayout>